Sat Mar 01 10:03:32 2003  George Lebl <jirka@5z.com>

	* src/funclib.c: on setting FloatPrecision actually break e and
	  GoldenRatio caches to recalculate (reread) these

Sat Mar 01 09:55:23 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: rational powers now use mpz_root to return an integer
	  if possible.

	* lib/number_theory/misc.gel: remove SymbolicNthRoot and do smarter
	  IsNthRoot given the new usage of powers

Fri Feb 28 13:32:46 2003  George Lebl <jirka@5z.com>

	* src/graphing.c: play with graph colors, make graph lines 1.5 thick,
	  add a plot progress indicator

	* src/mpwrap.c: fix conversions to int and rational from float

	* doc/manual.txt: add a note about unitary minus

Fri Feb 28 11:55:15 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: raise precision back to 256
	  bits as mpfr is blazing fast on that as well.

Fri Feb 28 11:11:56 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch], configure.in, src/Makefile.am:  If MPFR is present
	  use it for functions like sin, cos, atan, pow, log, exp.  This
	  increases speed of those operations by a LOT (simple test gave
	  about 10 times the speedup).  Still you can use genius without
	  mpfr, since it usually doesn't seem to be present in GMP packages
	  since packagers tend to not add --enable-mpfr (I don't know why
	  it's not the default).  In any case since mpfr is a static library
	  so far I think builds that I make on my system will work for people
	  with the standard GMP package from redhat.

	* src/gnome-genius.c, src/genius.c: add a note in case MPFR isn't
	  compiled in to the copyright string so that people know if they
	  are running without it.

Thu Feb 27 18:07:58 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c, src/lexer.l, src/parse.y, src/eval.[ch], src/calc.c:
	  Make UMINUS bind less then factorials and powers and have factorials
	  bind tighter then powers but then fixup the tree to make things