@@ -369,7 +369,7 @@ SortVector([1,2,2,3,1,2,3,4,2,2,2,2,2,2,3,2])			[1,1,2,2,2,2,2,2,2,2,2,2,3,3,3,4
 [1,2,3;4,5,6;7,8,8]^-2						[17,-20 2/3,9;-25 1/3,31 2/3,-14;10 1/3,-13 1/3,6]
 [1,2,3;4,5,6;7,8,8]^4						[6981,8598,9597;15876,19557,21834;23273,28672,32014]
 [1,2;3,4]^5							[1069,1558;2337,3406]
-[1,2;2,4]^-1							([1,2;2,4]^-1)
+[1,2;2,4]^-1							([1,2;2,4]^(-1))
 a=[1,2;3,4];1/a							[-2,1;1 1/2,-1/2]
 a=[1,2;3,4];a/2							[1/2,1;1 1/2,2]
 2/[1,2]								(2/[1,2])
@@ -442,8 +442,8 @@ function f(c...) = c ; f()+1					((null)+1)
 function f(c...) = c ; f(1)					[1]
 function f(c...) = c ; f(1,2)					[1,2]
 0!								1
-(-1)!								(-1!)
-(-1)!!								(-1!!)
+(-1)!								((-1)!)
+(-1)!!								((-1)!!)
 -1!								-1
 -1!!								-1
 0!!								1
@@ -525,3 +525,12 @@ a=1;(-a)^2							1
 (78125^(2/7))/101						25/101
 ((78125/(2^7))^(2/7))/101					25/404
 ((1/78125)^(2/7))						1/25
+[null,1,2]							[1,2]
+[1,null,2]							[1,2]
+[1,2,null]							[1,2]
+[[1;2],3,null]							[1,3;2,3]
+[[1;null],3]							[1,3]
+[1;2,null]							[1;2]
+[1,0;2,null]							[1,0;2,0]
+[null,[1;2]]							[1;2]
+[null,[1;2],3]							[1,3;2,3]
